--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@
 sonar.projectKey=petclinic
 sonar.projectName=petclinic
 sonar.projectVersion=1.0
-sonar.host.url=http://sonar:9000
+sonar.host.url=http://sonar:9000/sonar
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
