--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,8 @@ sonar.projectKey=petclinic
 sonar.projectName=petclinic
 sonar.projectVersion=1.0
 sonar.host.url=http://sonar:9000/sonar
+sonar.login=${INITIAL_ADMIN_USER}
+sonar.password=${INITIAL_ADMIN_PASSWORD}
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
