--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,9 @@ sonar.projectKey=petclinic
 sonar.projectName=petclinic
 sonar.projectVersion=1.0
 sonar.host.url=http://sonar:9000/sonar
-sonar.login=test
-sonar.password=test
+
+sonar.jdbc.login=test
+sonar.jdbc.password=test
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
