--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,8 +4,9 @@ sonar.projectName=petclinic
 sonar.projectVersion=1.0
 sonar.host.url=http://sonar:9000/sonar
 
-sonar.jdbc.login=test
-sonar.jdbc.password=test
+# Authentication
+sonar.security.realm=LDAP
+sonar.security.localUsers=admin,jenkins
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
