--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,8 +5,8 @@ sonar.projectVersion=1.0
 sonar.host.url=http://sonar:9000/sonar
 
 # Authentication
-sonar.security.realm=LDAP
-sonar.security.localUsers=admin,jenkins
+sonar.login=${SONAR_ACCOUNT_LOGIN}
+sonar.password=${SONAR_ACCOUNT_PASSWORD}
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
