--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.host.url=http://sonar:9000/sonar
 
 # Authentication
 sonar.login=${SONAR_ACCOUNT_LOGIN}
-sonar.password=${SONAR_ACCOUNT_PASSWORD}
+sonar.password=${PASSWORD_JENKINS}
 
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
