--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,10 @@
 
         <cobertura.version>2.7</cobertura.version>
 
+	<!-- Docker -->
+	<dockerfile-maven-version>1.4.10</dockerfile-maven-version>
+	<docker-image-name>findtopher/liatrio-petclinic</docker-image-name>
+
     </properties>
 
     <scm>
@@ -401,6 +405,43 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>2.5.3</version>
             </plugin>
+	    <plugin>
+	      <groupId>com.spotify</groupId>
+	      <artifactId>dockerfile-maven-plugin</artifactId>
+	      <version>${dockerfile-maven-version}</version>
+	      <executions>
+		<execution>
+		  <id>default</id>
+		  <goals>
+		    <goal>build</goal>
+		    <goal>push</goal>
+		  </goals>
+		  <configuration>
+		    <tag>${project.version}</tag>
+		  </configuration>
+		</execution>
+		<execution>
+		  <id>tag-latest</id>
+		  <goals>
+		    <goal>build</goal>
+		    <goal>push</goal>
+		  </goals>
+		  <configuration>
+		    <tag>latest</tag>
+		  </configuration>
+		</execution>
+	      </executions>
+	      <configuration>
+		<repository>findtopher/liatrio-petclinic</repository>
+		<imageTags>
+		  <imageTag>${project.version}</imageTag>
+		  <imageTag>latest</imageTag>
+		</imageTags>
+		<buildArgs>
+		  <VERSION>${project.version}</VERSION>
+		</buildArgs>
+	      </configuration>
+	    </plugin>
         </plugins>
     </build>
     <reporting>
@@ -436,12 +477,12 @@
       <repository>
 	<id>liatrio-interview-snapshots</id>
 	<name>liatrio-interview-snapshots</name>
-	<url>http://liatrio.findtopher.com:8081/nexus/content/repositories/snapshots</url>
+	<url>https://liatrio.findtopher.com/nexus/content/repositories/snapshots</url>
       </repository>
       <repository>
 	<id>liatrio-interview-releases</id>
 	<name>liatrio-interview-releases</name>
-	<url>http://liatrio.findtopher.com:8081/nexus/content/repositories/releases</url>
+	<url>https://liatrio.findtopher.com/nexus/content/repositories/releases</url>
       </repository>
     </repositories>
 
