fix path using ingress

--- a/helm/templates/petclinic-ingress.yaml
+++ b/helm/templates/petclinic-ingress.yaml
@@ -7,8 +7,10 @@ metadata:
 spec:
   rules:
   - http:
+      host: {{ .Values.environment }}.*
       paths:
-      - path: /{{ .Values.environment }}/petclinic
+#      - path: /{{ .Values.environment }}/petclinic
+      -path: /petclinic
         backend:
           serviceName: petclinic-service-{{ .Values.environment }}
           servicePort: 80
