--- a/helm/templates/petclinic-ingress.yaml
+++ b/helm/templates/petclinic-ingress.yaml
@@ -7,10 +7,8 @@ metadata:
 spec:
   rules:
   - http:
-      host: {{ .Values.environment }}.a910146643c8611e98dfe0a264e7ebfa-575602821.us-east-1.elb.amazonaws.com
       paths:
-#      - path: /{{ .Values.environment }}/petclinic
-      - path: /petclinic
+      - path: /petclinic/{{ .Values.environment }}
         backend:
           serviceName: petclinic-service-{{ .Values.environment }}
           servicePort: 80
