--- a/helm/templates/petclinic-ingress.yaml
+++ b/helm/templates/petclinic-ingress.yaml
@@ -8,7 +8,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /petclinic/{{ .Values.environment }}
+      - path: /{{ .Values.environment }}/petclinic
         backend:
           serviceName: petclinic-service-{{ .Values.environment }}
           servicePort: 80
