--- a/helm/templates/petclinic-ingress.yaml
+++ b/helm/templates/petclinic-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
-  - host: {{ .Values.environment }}.temp.jonathancavell.com
+  - host: {{ .Values.environment }}.liatrio.jonathancavell.com
   - http:
       paths:
       - path: /petclinic
