--- a/helm/templates/petclinic-ingress.yaml
+++ b/helm/templates/petclinic-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   rules:
   - host: {{ .Values.environment }}.liatrio.jonathancavell.com
-  - http:
+    http:
       paths:
       - path: /petclinic
         backend:
