--- a/base-manifest.yml
+++ b/base-manifest.yml
@@ -4,7 +4,7 @@ random-route: false
 path: ./target/petclinic.war
 instances: 1
 domain: liatr.io
-health-check-type: http
+#health-check-type: http
 
 applications:
  - name: pivotal-dev
