--- a/base-manifest.yml
+++ b/base-manifest.yml
@@ -3,8 +3,8 @@ memory: 1024M
 random-route: false
 path: ./target/petclinic.war
 instances: 1
-domain: liatr.io
-#health-check-type: http
+domain: cfapps.io
+health-check-type: http
 
 applications:
  - name: pivotal-dev
