Finalize deploy steps

--- a/prod-manifest.yml
+++ b/prod-manifest.yml
@@ -2,6 +2,6 @@
 inherit: base-manifest.yml
 
 applications:
- - name: pivotal-prod
+ - name: leo_pivotal-prod
    # Load balance between 2 instances instead of 1
    instances: 2
