--- a/prod-manifest.yml
+++ b/prod-manifest.yml
@@ -2,6 +2,7 @@
 inherit: base-manifest.yml
 
 applications:
- - name: leo_pivotal-prod
+ - name: leo-pivotal-prod
    # Load balance between 2 instances instead of 1
    instances: 2
+   domain: prod.cfapps.io
