blue green deployment

--- a/base-manifest.yml
+++ b/base-manifest.yml
@@ -4,6 +4,8 @@ random-route: false
 path: ./target/petclinic.war
 instances: 1
 domain: cfapps.io
+routes:
+  - leo-exercise-test.cfapps.io
 #health-check-type: http
 
 applications:
