finalize blue green

--- a/prod-manifest.yml
+++ b/prod-manifest.yml
@@ -7,7 +7,9 @@ routes:
   - route: leo-exercise.cfapps.io
 
 applications:
- - name: leo-pivotal-prod
+ - name: leo-pivotal-prod-blue
    # Load balance between 2 instances instead of 1
    instances: 2
-
+- name: leo-pivotal-prod-green
+   # Load balance between 2 instances instead of 1
+   instances: 2
